# ROS-2-Island-Model-Optimisation-Platform

./: .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml
.github/workflows/: demo-smoke.yml  docker-build.yml
configs/: demo_small_full.json  demo_small_hetero.json  demo_small_ring.json
src/island_evo_core/: CMakeLists.txt  package.xml
src/island_evo_core/include/island_evo_core/: de_algorithm.hpp  genetic_algorithm.hpp  island_node.hpp  optimization_algorithm.hpp  pso_algorithm.hpp
src/island_evo_core/launch/: island_system.launch.py
src/island_evo_core/msg/: Individual.msg  Packet.msg
src/island_evo_core/scripts/: generation_monitor_node.py
src/island_evo_core/src/: de_algorithm.cpp  generation_monitor_node.py  genetic_algorithm.cpp  island_node.cpp  monitor_node.py  pso_algorithm.cpp
tools/: merge_plot.py
